--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <title>A-Eye</title>
     <link rel="stylesheet" href="./styles/style.css">
+    <!-- CDN -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
 </head>
 
 <body>
@@ -19,9 +23,14 @@
     <div id="me"></div>
 
     <h4>Remote Feeds :</h4>
-    <div id="remote-container">
-
+    <div class="container">
+        <div class="row">
+            <div id="remote-container">
+                
+            </div>
+        </div>
     </div>
+    
     <div id="remote-container-2">
 
     </div>
