--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 </head>
 
@@ -26,7 +27,7 @@
     <div class="container">
         <div class="row">
             <div id="remote-container">
-                
+
             </div>
         </div>
     </div>
