--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <h1>
-        Video Call Demo
+        Live Streaming
     </h1>
 
     <p>App id : <input type="text" id="app-id" value=""></p>
@@ -25,17 +25,14 @@
     <div id="me"></div>
 
     <h4>Remote Feeds :</h4>
-    <div class="container">
-        <div class="row">
+    <!-- <div class="container">
+        <div class="row"> -->
             <div id="remote-container">
 
             </div>
-        </div>
-    </div>
+        <!-- </div>
+    </div> -->
     
-    <div id="remote-container-2">
-
-    </div>
 
     <script src="https://cdn.agora.io/sdk/release/AgoraRTCSDK-3.0.0.js"></script>
     <script src="scripts/script.js"></script>
