--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <script src="https://cdn.agora.io/sdk/release/AgoraRTCSDK-3.0.0.js"></script>
     <script src="scripts/script.js"></script>
     <script>
-        $('#remote-container').click(function() {
-            $('#remote-container').css({
+        $('#streamId').click(function() {
+            $('#streamId').css({
                 position: 'fixed',
                 top: 0,
                 right: 0,
