--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 
 <body>
     <h1>
-        Live Streaming
+        Live Streaming - A-Eye
     </h1>
 
     <p>App id : <input type="text" id="app-id" value=""></p>
-    <button id="start">Start</button>
+    <button id="start">Connect</button>
 
-    <h4>My Feed :</h4>
+    <h4>My Streaming :</h4>
     <div id="me"></div>
 
-    <h4>Remote Feeds :</h4>
+    <h4>Other WebCam Streaming :</h4>
     <!-- <div class="container">
         <div class="row"> -->
             <div id="remote-container">
